# dia-additional-shapes

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.AUTOSAR.md  README.Automata.md  README.Electrical.md  README.Racks.md  README.md  TODO  configure.ac
samples/: AUTOSAR.dia  Automata.dia  CH-1.dia  CMOS.dia  Circuit2.dia  Electrical.dia  HVAC.dia  LST.dia  Makefile.am  Optics.dia  Racks.dia  building_site.dia  central_data_processing.dia  chemistry_lab.dia  digital.dia  edpc.dia  electric2.dia  gradient.dia  renewable_energy.dia  scenegraph.dia  value_stream_mapping.dia
shapes/AUTOSAR/: AS_CS_provides.shape  AS_CS_requires_H.shape  AS_CS_requires_V.shape  AS_Cal_H.shape  AS_Cal_V.shape  AS_Component.shape  AS_Composition.shape  AS_IRV.shape  AS_Runnable.shape  AS_SA_SWC.shape  AS_SR_H.shape  AS_SR_V.shape  AS_SWC.shape  AS_Service_CS_provides.shape  AS_Service_CS_requires_H.shape  AS_Service_CS_requires_V.shape  AS_Service_SR_H.shape  AS_Service_SR_V.shape  Makefile.am
shapes/Automata/: Makefile.am  finalstate.shape  startfinalstate.shape  startstate.shape  state.shape
shapes/CH-1/: Makefile.am  condition.shape  delay.shape  department.shape  device.shape  employee.shape  event.shape  junction.shape  note.shape  outpart.shape  storage.shape  work.shape
shapes/CMOS/: Makefile.am  gnd_h.shape  gnd_v.shape  nmos_h.shape  nmos_v.shape  pmos_h.shape  pmos_v.shape  vdd_h.shape  vdd_v.shape
shapes/Circuit2/: Makefile.am  dcapacitor.shape  ddiode.shape  dinductor.shape  dinductor_de.shape  dled_de.shape  dpcapacitor.shape  dresistor.shape  dresistor_de.shape  dzener.shape  hammeter.shape  hpcapacitor.shape  hvoltmeter.shape  newhled.shape  newvled.shape  opto.shape  ramp.shape  relay.shape  sine.shape  square.shape  triac.shape  triangle.shape  vammeter.shape  vpcapacitor.shape  vvoltmeter.shape
shapes/Electrical/: Makefile.am  ac1_h.shape  ac1_v.shape  ac3_h.shape  ac3_v.shape  ac_h.shape  ac_v.shape  bel_l.shape  bel_r.shape  bel_v.shape  buzzer_l.shape  buzzer_r.shape  buzzer_v.shape  carrier_1.shape  carrier_1_h.shape  carrier_1_v.shape  carrier_1wire_h.shape  carrier_1wire_v.shape  carrier_2.shape  carrier_2_h.shape  carrier_2_v.shape  carrier_2wire_h.shape  carrier_2wire_v.shape  carrier_3.shape  carrier_3_h.shape  carrier_3_v.shape  carrier_3wire_h.shape  carrier_3wire_v.shape  carrier_inair.shape  carrier_inground_h.shape  carrier_inground_v.shape  carrier_intube_h.shape  carrier_intube_v.shape  carrier_inwall_h.shape  carrier_inwall_v.shape  carrier_n.shape  carrier_n_h.shape  carrier_n_v.shape  carrier_nwire_h.shape  carrier_nwire_v.shape  (+47 more)
shapes/HVAC/: 1WayDiffuser.shape  24x24Return.shape  2WayDiffuser.shape  3WayDiffuser.shape  4WayDiffuser.shape  CeilingVent.shape  CeilingVentVert.shape  Duct.shape  DuctVert.shape  FloorVent.shape  FloorVentVert.shape  HumiditySensor.shape  InsulatedDuct.shape  InsulatedDuctVert.shape  Makefile.am  Thermostat.shape  VolumeDamper.shape  VolumeDamperVert.shape  WallVent.shape  WallVentVert.shape
shapes/LST/: Makefile.am  associator_subsystem.shape  cn_subsystem.shape  convert_subsystem.shape  decider_subsystem.shape  decode_subsystem.shape  decoder.shape  distributor_subsystem.shape  encode_subsystem.shape  encoder.shape  extruder.shape  ingestor_subsystem.shape  internal_subsystem.shape  it_subsystem.shape  memory_subsystem.shape  mestorage.shape  motor.shape  ot_subsystem.shape  producer.shape  reproducer_subsystem.shape  supporter_subsystem.shape  timer.shape
shapes/Optics/: Makefile.am  atten.shape  beam.shape  circulator.shape  coupler.shape  coupler_vert.shape  detector.shape  detector_vert.shape  dfb_laser.shape  dfb_laser_vert.shape  edfa.shape  edfa_vert.shape  fibre.shape  fibre_vert.shape  isolator.shape  isolator_vert.shape  lpg.shape  lpg_vert.shape  mod.shape  mod_vert.shape  phasemod.shape  phasemod_vert.shape  polarisation_control.shape  polarisation_control_vert.shape  scope.shape  sine.shape  spectrum.shape  square.shape  tuneable.shape  wave.shape
shapes/Racks/: Makefile.am  equipment_10u.shape  equipment_11u.shape  equipment_12u.shape  equipment_1u.shape  equipment_2u.shape  equipment_3u.shape  equipment_4u.shape  equipment_5u.shape  equipment_6u.shape  equipment_7u.shape  equipment_8u.shape  equipment_9u.shape  power_strip_bs_7.shape  power_strip_schuko_8.shape  power_strip_ute_8.shape  rack_12u.shape  rack_16u.shape  rack_20u.shape  rack_38u.shape  rack_42u.shape  rack_label_anchors_42u.shape
shapes/building_site/: Makefile.am  circle_diagonal_quarters_filled.shape  concrete_mixer.shape  fence_horizontal.shape  fence_vertical.shape  pre_silo.shape  proportioning_batcher.shape  road_crossroads.shape  road_horizontal.shape  road_rotated_tee.shape  road_tee.shape  road_turn.shape  road_vertical.shape  slope_horizontal.shape  slope_vertical.shape  wall_horizontal.shape  wall_vertical.shape
shapes/central_data_processing/: CPD_rack_15.shape  CPD_rack_32.shape  CPD_rack_36.shape  CPD_rack_42.shape  CPD_rack_44.shape  CPD_rack_5.shape  CPD_rack_7.shape  Litter.shape  Makefile.am  Modem.shape  Organizador_Rack_1U.shape  Organizador_Rack_2U.shape  Organizer_Rack_1U.shape  Organizer_Rack_2U.shape  Path_Painel_24P.shape  Router.shape  Server_Rack_1U.shape  Server_Rack_2U.shape  Server_Rack_2U_Slow.shape  Server_Rack_2U_Very_Slow.shape  Server_Rack_3U.shape  Server_Rack_3U_Slow_Density.shape  Server_Rack_4U.shape  Server_Rack_4U_Right_Capacity.shape  Server_Rack_4U_Slow_Capacity.shape  Server_Rack_4U_Very_Right_Capacity.shape  Server_Rack_5U.shape  Server_Rack_5U_Right_Density.shape  Storage_Rack_3U.shape  (+8 more)
sheets/: .gitignore  AUTOSAR.sheet.in  Automata.sheet.in  CH-1.sheet.in  CMOS.sheet.in  Circuit2.sheet.in  Electrical.sheet  Electrical.sheet.in  HVAC.sheet.in  LST.sheet.in  Makefile.am  Optics.sheet.in  Racks.sheet.in  building_site.sheet.in  central_data_processing.sheet.in  chemistry_lab.sheet.in  digital.sheet.in  edpc.sheet.in  electric2.sheet.in  electricity_be.sheet  electronic.sheet.in  gradient.sheet.in  renewable_energy.sheet.in  scenegraph.sheet.in  value_stream_mapping.sheet.in
(+234 files in other folders)
