AC_INIT([dia-additional-shapes],[0.0.1],[sdteffen@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign dist-bzip2 dist-zip])
IT_PROG_INTLTOOL([0.35.0])
GETTEXT_PACKAGE=dia-additional-shapes
AC_SUBST(GETTEXT_PACKAGE)
dnl AM_GNU_GETTEXT_VERSION([0.17])
dnl AM_GNU_GETTEXT([external])
AC_CONFIG_FILES([Makefile samples/Makefile shapes/Makefile \
	shapes/building_site/Makefile shapes/Circuit2/Makefile \
	shapes/electric2/Makefile shapes/gradient/Makefile \
	shapes/Racks/Makefile	\
	shapes/value_stream_mapping/Makefile sheets/Makefile \
	src/Makefile po/Makefile.in])
AC_OUTPUT

