AC_INIT([dia-additional-shapes],[0.9.3],[sdteffen@sdteffen.de])
AM_INIT_AUTOMAKE([-Wall -Werror foreign dist-bzip2 dist-zip])
IT_PROG_INTLTOOL([0.35.0])
GETTEXT_PACKAGE=dia-additional-shapes
AC_SUBST(GETTEXT_PACKAGE)
dnl AM_GNU_GETTEXT_VERSION([0.17])
dnl AM_GNU_GETTEXT([external])
AC_CONFIG_FILES([Makefile samples/Makefile shapes/Makefile \
	shapes/building_site/Makefile shapes/central_data_processing/Makefile \
	shapes/CH-1/Makefile shapes/chemistry_lab/Makefile \
	shapes/Circuit2/Makefile shapes/CMOS/Makefile shapes/digital/Makefile \
	shapes/edpc/Makefile \
	shapes/electric2/Makefile shapes/electronic/Makefile \
	shapes/gradient/Makefile shapes/LST/Makefile shapes/Racks/Makefile \
	shapes/renewable_energy/Makefile  \
	shapes/value_stream_mapping/Makefile sheets/Makefile \
	src/Makefile po/Makefile.in])
AC_OUTPUT

