sampledir = $(datadir)/dia/samples

sample_DATA = Automata.dia AUTOSAR.dia building_site.dia \
	central_data_processing.dia \
	CH-1.dia \
	chemistry_lab.dia Circuit2.dia CMOS.dia digital.dia edpc.dia \
	electric2.dia \
	gradient.dia HVAC.dia Racks.dia renewable_energy.dia scenegraph.dia \
	value_stream_mapping.dia

EXTRA_DIST = $(sample_DATA)
